# cpp-Cmake-Supermarket-Management-System

1.without using Cmake File/: database.txt  main.cpp
2.by Using Cmake File/: CMakeLists.txt
2.by Using Cmake File/All-functions/: CMakeLists.txt
2.by Using Cmake File/All-functions/src/functions-exe/: add.cpp  administor.cpp  buyer.cpp  edit.cpp  list.cpp  menu.cpp  recepit.cpp  remove.cpp  shopping.hpp
2.by Using Cmake File/main-exe/: CMakeLists.txt  main.cpp
